--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ header>p{
     font-size: 24px;
 }
 
-header>p::nth-word(1){
+header>p>span{
     font-family: Athene;
     font-weight: bold;
 }
@@ -131,10 +131,12 @@ tbody>tr{
 tbody>tr>td:nth-of-type(1){
     padding: 2vh 2vw 2vh 0;
     font-size: 14px;
+    border-bottom: 1px solid black;
 }
 
 tbody>tr>td:nth-of-type(2){
     font-size: 21px;
+    border-bottom: 1px solid black;
 }
 
 tbody>tr>td:nth-last-child(1){
@@ -143,8 +145,14 @@ tbody>tr>td:nth-last-child(1){
     padding-left: 25vw;
     padding-top: 3vh;
     padding-bottom: 3vh;
+    border-bottom: 1px solid black;
 }
 
+main>section>article>img{
+    height: 100px;
+    width: 100px;
+    margin: 8vh 0 8vh 87vw;
+}
 
 /*=====================
         WORKS
